@@ -1,5 +1,9 @@
 2014-03-23  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Renaming the internal meta-particle class in DressedLeptons (and
+	exposed in the W/ZFinders) from ClusteredLepton to DressedLepton
+	for consistency with the change in name of its containing class.
+
 	* Removing need for cmake and unportable yaml-cpp trickery by
 	using libtool to build an embedded symbol-mangled copy of yaml-cpp
 	rather than trying to mangle and build direct from the tarball.
